--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,3 +9,9 @@ services:
       - "./${APPLICATION_DIR}:/root/${APPLICATION_DIR}"
     ports:
       - "${PORT}:${PORT}"
+    networks:
+      - worldengine
+
+networks:
+  worldengine:
+    external: true
