--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "world_engine"
 version = "0.1.0"
-description = "A project allowing one to set up a FastAPI based Microservice, using cookiecutter"
+description = "Release the world engine!"
 authors = ["Thomas van Erven"]
 
 [tool.poetry.dependencies]
@@ -12,6 +12,7 @@ fastapi = "^0.85.0"
 pytest = "^7.1.3"
 requests = "^2.28.1"
 dynaconf = "^3.1.11"
+jinja2 = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.5.0"
