--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,14 +5,15 @@ description = "Release the world engine!"
 authors = ["Thomas van Erven"]
 
 [tool.poetry.dependencies]
-python = "^3.9.14"
+python = "^3.11.0"
 uvicorn = "^0.18.3"
 pydantic = "^1.10.2"
-fastapi = "^0.85.0"
+fastapi = "0.96.0"
 pytest = "^7.1.3"
 requests = "^2.28.1"
 dynaconf = "^3.1.11"
 jinja2 = "^3.1.2"
+httpx = "^0.24.1"
 
 [tool.poetry.dev-dependencies]
 ipython = "^8.5.0"
