--- a/src/templates/cloudinit/docker-dataverse.yml
+++ b/src/templates/cloudinit/docker-dataverse.yml
@@ -8,19 +8,16 @@ packages:
   - software-properties-common
   - sed
 runcmd:
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-  - add-apt-repository "deb [arch=$(dpkg --print-architecture)] https://download.docker.com/linux/debian $(lsb_release -cs) stable"
+  - sudo install -m 0755 -d /etc/apt/keyrings
+  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+  - sudo chmod a+r /etc/apt/keyrings/docker.gpg
+  - echo "deb [arch="$(dpkg --print-architecture)" signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu "$(. /etc/os-release && echo "$VERSION_CODENAME")" stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
   - apt-get update -y
-  - apt-get install -y docker-ce docker-ce-cli containerd.io
+  - sudo NEEDRESTART_MODE=a apt-get install docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin -y
   - systemctl start docker
   - systemctl enable docker
-  - cp /etc/ssh/deploykey /home/root/.ssh/rootkey
-  - chown -R root:root /home/root/.ssh
-  - chmod 0600 /home/root/.ssh/rootkey
-  - echo 'eval $(ssh-agent -s)' >> /home/ubuntu/.bashrc
-  - echo 'ssh-add /home/ubuntu/.ssh/rootkey' >> /home/root/.bashrc
   - mkdir -p /data/dataverse-docker
   - cd /data/dataverse-docker/
-  - git clone git@github.com:IQSS/dataverse-docker.git .
+  - git clone https://github.com/IQSS/dataverse-docker .
   - cp .env_sample .env
-  - docker compose up -d
+  - usermod -aG docker azureuser
