--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,16 +3,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: thomasve/worldengine:0.1.3
-    container_name: "worldengine"
+    image: gdcc/infra-templates:0.1
+    container_name: "infra-templates"
     command: ["uvicorn", "main:app", "--reload", "--proxy-headers", "--host", "0.0.0.0", "--port", "${PORT}"]
     volumes:
       - "./${APPLICATION_DIR}:/${APPLICATION_DIR}"
     ports:
       - "${PORT}:${PORT}"
-    networks:
-      - worldengine
-
-networks:
-  worldengine:
-    external: true
